# ifran

./: .audit.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SECURITY.md  VERSION  benchmarks.md  build.rs  deny.toml  osv-scanner.toml
.cargo/: config.toml
crates/ifran-api/: Cargo.toml
crates/ifran-api/src/: main.rs  state.rs
crates/ifran-api/src/grpc/: service.rs
crates/ifran-api/src/middleware/: auth.rs  rate_limit.rs  telemetry.rs  validation.rs
crates/ifran-api/src/rest/: bridge.rs  datasets.rs  distributed.rs  error.rs  eval.rs  experiment.rs  fleet.rs  inference.rs  lineage.rs  marketplace.rs  models.rs  openai_compat.rs  pagination.rs  rag.rs  rlhf.rs  router.rs  system.rs  tenants.rs  training.rs  versioning.rs
crates/ifran-api/tests/: api_integration.rs
crates/ifran-backends/: Cargo.toml
crates/ifran-backends/src/: lib.rs  openai_compat.rs  router.rs  traits.rs
crates/ifran-backends/src/candle/: mod.rs
crates/ifran-backends/src/gaudi/: mod.rs
crates/ifran-backends/src/gguf/: mod.rs
crates/ifran-backends/src/inferentia/: mod.rs
crates/ifran-backends/src/llamacpp/: mod.rs
crates/ifran-backends/src/metal/: mod.rs
crates/ifran-backends/src/ollama/: mod.rs
crates/ifran-backends/src/oneapi/: mod.rs
crates/ifran-backends/src/onnx/: mod.rs
crates/ifran-backends/src/qualcomm/: mod.rs
crates/ifran-backends/src/tensorrt/: mod.rs
crates/ifran-backends/src/tpu/: mod.rs
crates/ifran-backends/src/vllm/: mod.rs
crates/ifran-backends/src/vulkan/: mod.rs
crates/ifran-backends/src/wasm/: mod.rs
crates/ifran-backends/src/xdna/: mod.rs
crates/ifran-bridge/: Cargo.toml
crates/ifran-bridge/src/: client.rs  discovery.rs  protocol.rs  server.rs
crates/ifran-cli/: Cargo.toml
crates/ifran-cli/src/: main.rs  output.rs
crates/ifran-cli/src/commands/: eval.rs  experiment.rs  list.rs  marketplace.rs  pull.rs  remove.rs  run.rs  serve.rs  status.rs  train.rs
crates/ifran-core/: Cargo.toml
crates/ifran-core/benches/: core_benchmarks.rs
crates/ifran-core/src/: config.rs  lib.rs  training_events.rs
crates/ifran-core/src/ab_test/: router.rs
crates/ifran-core/src/budget/: checker.rs
crates/ifran-core/src/dataset/: curator.rs
crates/ifran-core/src/drift/: detector.rs
crates/ifran-core/src/eval/: benchmarks.rs  judge.rs  responsible_ai.rs  runner.rs  store.rs
crates/ifran-core/src/experiment/: store.rs
crates/ifran-core/src/fleet/: manager.rs
crates/ifran-core/src/hardware/: allocator.rs  detect.rs  events.rs  telemetry.rs
crates/ifran-core/src/lifecycle/: manager.rs  memory.rs  pool.rs
crates/ifran-core/src/lineage/: store.rs
crates/ifran-core/src/marketplace/: catalog.rs  publisher.rs  resolver.rs  trust.rs
crates/ifran-core/src/preference/: store.rs
crates/ifran-core/src/pull/: downloader.rs  progress.rs  verifier.rs
crates/ifran-core/src/rag/: chunker.rs  pipeline.rs  store.rs
crates/ifran-core/src/registry/: direct.rs  discovery.rs  huggingface.rs  oci.rs  scanner.rs
crates/ifran-core/src/rlhf/: generator.rs  store.rs
crates/ifran-core/src/scoring/: quality.rs
crates/ifran-core/src/storage/: cache.rs  db.rs  encryption.rs  layout.rs  mod.rs  traits.rs
crates/ifran-core/src/tenant/: store.rs
crates/ifran-core/src/versioning/: store.rs
crates/ifran-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/ifran-desktop/src-tauri/src/: main.rs
crates/ifran-train/: Cargo.toml
crates/ifran-train/src/checkpoint/: merger.rs  mod.rs  store.rs
crates/ifran-train/src/continual/: config.rs
crates/ifran-train/src/dataset/: labeler.rs  loader.rs  processor.rs  validator.rs
crates/ifran-train/src/distributed/: aggregator.rs  coordinator.rs  placement.rs  worker.rs
crates/ifran-train/src/executor/: docker.rs  mod.rs  subprocess.rs
crates/ifran-train/src/experiment/: runner.rs  search.rs
crates/ifran-train/src/integration/: ollama.rs
crates/ifran-train/src/job/: manager.rs  scheduler.rs  status.rs  store.rs
crates/ifran-train/src/methods/: distillation.rs  dpo.rs  full.rs  lora.rs  rlhf.rs
crates/ifran-train/src/scripts/: train_distill.py  train_rlhf.py
crates/ifran-train/src/workflow/: pipeline.rs
crates/ifran-types/: Cargo.toml  build.rs
crates/ifran-types/src/: ab_test.rs  backend.rs  dataset.rs  distributed.rs  drift.rs  error.rs  eval.rs  experiment.rs  inference.rs  lib.rs  lineage.rs  marketplace.rs  model.rs  pagination.rs  registry.rs  rlhf.rs  tenant.rs  training.rs
crates/synapse-api/: Cargo.toml
crates/synapse-api/src/: lib.rs  main.rs  state.rs
crates/synapse-api/src/grpc/: service.rs
crates/synapse-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  telemetry.rs
crates/synapse-api/src/rest/: bridge.rs  datasets.rs  distributed.rs  error.rs  eval.rs  experiment.rs  fleet.rs  inference.rs  lineage.rs  marketplace.rs  mod.rs  models.rs  openai_compat.rs  pagination.rs  rag.rs  rlhf.rs  router.rs  system.rs  tenants.rs  training.rs  versioning.rs
crates/synapse-api/tests/: api_integration.rs
crates/synapse-backends/: Cargo.toml
crates/synapse-backends/src/: cost.rs  lib.rs  router.rs  traits.rs
crates/synapse-bridge/: Cargo.toml
crates/synapse-bridge/src/: client.rs  discovery.rs  lib.rs  protocol.rs  server.rs
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: main.rs  output.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: config.rs  lib.rs  training_events.rs
crates/synapse-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/synapse-train/: Cargo.toml
crates/synapse-train/src/: lib.rs
crates/synapse-types/: Cargo.toml  build.rs
crates/synapse-types/src/: ab_test.rs  backend.rs  dataset.rs  distributed.rs  error.rs  eval.rs  inference.rs  lib.rs  marketplace.rs  model.rs  rag.rs  registry.rs  rlhf.rs  tenant.rs  training.rs  versioning.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_audit_chain.rs  fuzz_config.rs  fuzz_inference_request.rs  fuzz_output_filter.rs  fuzz_prompt_guard.rs
(+404 files in other folders)
