[workspace]
resolver = "2"
members = [
    "crates/ifran-types",
    "crates/ifran-core",
    "crates/ifran-backends",
    "crates/ifran-train",
    "crates/ifran-api",
    "crates/ifran-bridge",
    "crates/ifran-cli",
    # "crates/ifran-desktop/src-tauri",
]

[workspace.package]
version = "2026.3.26"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/MacCracken/ifran"

[workspace.lints.clippy]
collapsible_if = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }
tracing-opentelemetry = "0.32"

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
# gRPC
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }
owo-colors = "4"

# Async utilities
async-trait = "0.1"
futures = "0.3"
dashmap = "6"

# Crypto / hashing
sha2 = "0.10"
blake3 = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Indicatif for progress bars
indicatif = "0.18"

# Property-based testing
proptest = "1"

# Hardware acceleration detection
ai-hwaccel = "0.23"

# Ecosystem crates
hoosh = { path = "../hoosh" }
majra = { version = "1.0.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
