[package]
name = "ifran"
description = "Local LLM inference, training, and fleet management platform"
version = "2026.3.28"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/MacCracken/ifran"
homepage = "https://github.com/MacCracken/ifran"
readme = "README.md"
keywords = ["llm", "inference", "training", "model-serving", "ai"]
categories = ["science", "web-programming::http-server"]
rust-version = "1.89"
exclude = [".claude/", ".github/", "docs/", "scripts/", "crates/", "coverage/"]

[[bin]]
name = "ifran-server"
path = "src/main.rs"

[[bin]]
name = "ifran"
path = "src/cli_main.rs"

[features]
default = ["llamacpp", "candle-backend", "gguf", "ollama", "vllm", "onnx", "tensorrt", "tpu", "gaudi", "inferentia", "oneapi", "qualcomm", "xdna"]
full = ["default", "metal", "vulkan", "wasm", "hwaccel", "otlp"]
# Inference backend feature flags
llamacpp = []
candle-backend = []
gguf = []
onnx = []
tensorrt = []
tpu = []
vllm = []
ollama = []
wasm = []
gaudi = []
inferentia = []
metal = []
vulkan = []
oneapi = []
qualcomm = []
xdna = []
# Hardware acceleration detection
hwaccel = ["dep:ai-hwaccel"]
# OpenTelemetry
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (feature-gated)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.32", optional = true }

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"

# CLI
clap = { version = "4", features = ["derive"] }
owo-colors = "4"

# Async utilities
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Crypto / hashing
sha2 = "0.10"
blake3 = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Progress bars
indicatif = "0.18"

# Connection pooling (covered by r2d2 + r2d2_sqlite above)

# Hardware acceleration detection
ai-hwaccel = { version = "0.23", optional = true }

# Ecosystem crates
hoosh = { path = "../hoosh" }
majra = { version = "1.0.1", features = ["full"] }
prometheus = "0.14"

# RNG (for training)
rand = "0.10"
rand_core = "0.10"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
mockito = "1"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "core_benchmarks"
harness = false

[lints.clippy]
collapsible_if = "allow"

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
