[package]
name = "ifran-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ifran = { path = "..", features = ["server"] }
serde_json = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"
doc = false

[[bin]]
name = "fuzz_prompt_guard"
path = "fuzz_targets/fuzz_prompt_guard.rs"
doc = false

[[bin]]
name = "fuzz_output_filter"
path = "fuzz_targets/fuzz_output_filter.rs"
doc = false

[[bin]]
name = "fuzz_inference_request"
path = "fuzz_targets/fuzz_inference_request.rs"
doc = false

[[bin]]
name = "fuzz_audit_chain"
path = "fuzz_targets/fuzz_audit_chain.rs"
doc = false
