[package]
name = "ifran-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ifran-types = { path = "../ifran-types" }
ifran-train = { path = "../ifran-train" }
ifran-backends = { path = "../ifran-backends" }
ifran-core = { path = "../ifran-core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
