[package]
name = "ifran-train"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ifran-types = { path = "../ifran-types" }
ifran-core = { path = "../ifran-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rand = "0.10"
rand_core = "0.10"
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
toml = { workspace = true }
majra = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
