[package]
name = "synapse-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-core = { path = "../synapse-core" }
synapse-backends = { path = "../synapse-backends" }
synapse-train = { path = "../synapse-train" }
synapse-bridge = { path = "../synapse-bridge" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
