[package]
name = "synapse-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-core = { path = "../synapse-core" }
synapse-backends = { path = "../synapse-backends" }
synapse-train = { path = "../synapse-train" }
synapse-bridge = { path = "../synapse-bridge" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
governor = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
