[package]
name = "synapse-backends"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["llamacpp", "candle-backend", "gguf", "ollama", "vllm", "onnx", "tensorrt"]
llamacpp = []
candle-backend = []
gguf = []
onnx = []
tensorrt = []
vllm = []
ollama = []

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-core = { path = "../synapse-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
