[package]
name = "synapse-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
