[package]
name = "synapse-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-train = { path = "../synapse-train" }
synapse-backends = { path = "../synapse-backends" }
synapse-core = { path = "../synapse-core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
