[package]
name = "synapse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-core = { path = "../synapse-core" }
synapse-backends = { path = "../synapse-backends" }
synapse-train = { path = "../synapse-train" }
synapse-api = { path = "../synapse-api" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
owo-colors = { workspace = true }

[lints]
workspace = true
