[package]
name = "synapse-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
