[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }

[lints]
workspace = true
