[package]
name = "synapse-train"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synapse-types = { path = "../synapse-types" }
synapse-core = { path = "../synapse-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
rusqlite = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
