[package]
name = "synapse-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
