[package]
name = "ifran-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ifran_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ifran-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ifran-types = { path = "../../ifran-types" }
ifran-core = { path = "../../ifran-core" }
ifran-backends = { path = "../../ifran-backends" }
ifran-train = { path = "../../ifran-train" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
