[package]
name = "synapse-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "synapse_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "synapse-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
synapse-types = { path = "../../synapse-types" }
synapse-core = { path = "../../synapse-core" }
synapse-backends = { path = "../../synapse-backends" }
synapse-train = { path = "../../synapse-train" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
